# snackmap

./: CMakeCache.txt  CMakeLists.txt  Insert_data_test.cpp  Makefile  ProjectIdea.txt  cmake_install.cmake  hello.txt  main.cpp  snackmap
QTProjectFiles/: PostWindow_try.cpp  PostWindow_try.h
QTProjectFiles/graphicInterface/: CMakeLists.txt  editprofile.cpp  editprofile.h  editprofile.ui  editprofile_try.cpp  editprofile_try.h  explorewindow.cpp  explorewindow.h  explorewindow.ui  friendswindow.cpp  friendswindow.h  friendswindow.ui  loginpage.cpp  loginpage.h  loginpage.ui  loginpage_try.cpp  loginpage_try.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  postswindow.cpp  postswindow.h  postswindow.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  ressources.qrc
componentTesting/: a.out  loginc.cpp
controller/: FriendController.cpp  FriendController.h  LoginController.cpp  LoginController.h  PostController.cpp  PostController.h  ProfileController.cpp  ProfileController.h  UserController.cpp  UserController.h
model/: DatabaseManager.cpp  DatabaseManager.h  PostModel.cpp  PostModel.h  UserModel.cpp  UserModel.h
resources/: app_config.json  database.db
